--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,16 +78,16 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:2.8.47'
 
     // Support libraries
-    implementation 'com.google.android.material:material:1.1.0-alpha02'
+    implementation 'com.google.android.material:material:1.1.0-rc02'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha01'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.preference:preference:1.1.0-alpha02'
+    implementation 'androidx.preference:preference:1.1.0'
     implementation 'androidx.browser:browser:1.0.0'
-    implementation 'androidx.core:core:1.1.0-alpha03'
+    implementation 'androidx.core:core:1.2.0-rc01'
 
-    implementation "android.arch.work:work-runtime:1.0.0-beta01"
+    implementation "android.arch.work:work-runtime:1.0.1"
 
     // Other libraries
     implementation 'org.jsoup:jsoup:1.10.2'
