--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,14 +78,14 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:2.8.47'
 
     // Support libraries
-    implementation 'com.google.android.material:material:1.1.0-rc02'
+    implementation 'com.google.android.material:material:1.4.0-rc01'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.preference:preference:1.1.0'
-    implementation 'androidx.browser:browser:1.0.0'
-    implementation 'androidx.core:core:1.2.0-rc01'
+    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.browser:browser:1.3.0'
+    implementation 'androidx.core:core:1.6.0'
 
     implementation "android.arch.work:work-runtime:1.0.1"
 
