--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,8 +29,12 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
       - name: Run tests
-        run: ./gradlew jacocoTestReport coveralls
+          id: runTests
+          uses: eskatos/gradle-command-action@v1
+          with:
+            gradle-version: current
+            wrapper-cache-enabled: true
+            dependencies-cache-enabled: true
+            configuration-cache-enabled: true
+            arguments: jacocoTestReport coveralls
