--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -5,12 +5,19 @@ on:
   release:
     types: [ created ]
 
-# Where will they run
+env:
+  LANG: "de_DE.UTF-8"
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Set up Locale - de_DE.UTF-8
+        run: |
+          sudo locale-gen de_DE.UTF-8
+          sudo update-locale LANG=de_DE.UTF-8
+
       - name: Checkout
         uses: actions/checkout@v2
 
