--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -27,19 +27,30 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
       - name: Run tests
-        run: ./gradlew jacocoTestReport coveralls
+          id: runTests
+          uses: eskatos/gradle-command-action@v1
+          with:
+            gradle-version: current
+            wrapper-cache-enabled: true
+            dependencies-cache-enabled: true
+            configuration-cache-enabled: true
+            arguments: testReleaseUnitTest
 
       - name: Build all artifacts
-        run: ./gradlew clean assembleRelease
+          id: buildAllApks
+          uses: eskatos/gradle-command-action@v1
+          with:
+            gradle-version: current
+            wrapper-cache-enabled: true
+            dependencies-cache-enabled: true
+            configuration-cache-enabled: true
+            arguments: clean assembleRelease bundleRelease
 
       - uses: r0adkll/sign-android-release@v1
         name: Sign app APK
         # ID used to access action output
-        id: sign_app
+        id: sign_apk
         with:
           releaseDirectory: app/build/outputs/apk/release
           signingKeyBase64: ${{ secrets.SIGNING_KEY }}
@@ -49,18 +60,21 @@ jobs:
         env:
           BUILD_TOOLS_VERSION: "30.0.2"
 
-      - name: Build all artifacts
-        id: buildAllApks
-        uses: eskatos/gradle-command-action@v1
-        with:
-          gradle-version: current
-          wrapper-cache-enabled: true
-          dependencies-cache-enabled: true
-          configuration-cache-enabled: true
-          arguments: assembleRelease
+      - uses: r0adkll/sign-android-release@v1
+          name: Sign app bundle
+          # ID used to access action output
+          id: sign_bundle
+          with:
+            releaseDirectory: app/build/outputs/bundle/release
+            signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+            alias: ${{ secrets.ALIAS }}
+            keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+            keyPassword: ${{ secrets.KEY_PASSWORD }}
+          env:
+            BUILD_TOOLS_VERSION: "30.0.2"
 
-      # Example use of `signedReleaseFile` output -- not needed
-      - uses: actions/upload-artifact@v2
+      # Upload bundle, apk and mapping to release
+      - uses: ncipollo/release-action@v1
         with:
-          name: Signed app bundle
-          path: ${{steps.sign_app.outputs.signedReleaseFile}}
+          artifacts: "app/build/outputs/apk/release/*.apk;app/build/outputs/bundle/release/*.aab;app\build\outputs\mapping\release\mapping.txt"
+          token: ${{ secrets.GITHUB_TOKEN }}
