--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -74,7 +74,12 @@ jobs:
           BUILD_TOOLS_VERSION: "30.0.2"
 
       # Upload bundle, apk and mapping to release
-      - uses: ncipollo/release-action@v1
+      - name: Upload artifacts to GitHub release
+        uses: Roang-zero1/github-upload-release-artifacts-action@master
         with:
-          artifacts: "app/build/outputs/apk/release/*.apk,app/build/outputs/bundle/release/*.aab,app/build/outputs/mapping/release/mapping.txt"
-          token: ${{ secrets.GITHUB_TOKEN }}
+          args:
+            - ${{steps.sign_app.outputs.signedReleaseFile}}
+            - ${{steps.sign_bundle.outputs.signedReleaseFile}}
+            - app/build/outputs/mapping/release/mapping.txt
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
