--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -74,12 +74,23 @@ jobs:
           BUILD_TOOLS_VERSION: "30.0.2"
 
       # Upload bundle, apk and mapping to release
-      - name: Upload artifacts to GitHub release
-        uses: Roang-zero1/github-upload-release-artifacts-action@master
+      - name: Upload apk to release
+        uses: svenstaro/upload-release-action@v2
         with:
-          args:
-          - ${{steps.sign_app.outputs.signedReleaseFile}}
-          - ${{steps.sign_bundle.outputs.signedReleaseFile}}
-          - app/build/outputs/mapping/release/mapping.txt
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ${{ steps.sign_app.outputs.signedReleaseFile }}
+          tag: ${{ githitub.ref }}
+
+      - name: Upload bundle to release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ${{ steps.sign_bundle.outputs.signedReleaseFile }}
+          tag: ${{ github.ref }}
+
+      - name: Upload mapping to release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: app/build/outputs/mapping/release/mapping.txt
+          tag: ${{ github.ref }}
