--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -78,7 +78,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ${{ steps.sign_app.outputs.signedReleaseFile }}
+          file: ${{ steps.sign_apk.outputs.signedReleaseFile }}
           tag: ${{ github.ref }}
 
       - name: Upload bundle to release
